profile img was added

--- a/MvcCV/MvcCV.csproj
+++ b/MvcCV/MvcCV.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controllers\DeneyimController.cs" />
     <Compile Include="Controllers\EgitimController.cs" />
     <Compile Include="Controllers\HakkımdaController.cs" />
+    <Compile Include="Controllers\HobilerimController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IletisimController.cs" />
     <Compile Include="Controllers\SertifikaController.cs" />
@@ -2374,6 +2375,7 @@
     <Content Include="Views\Sertifika\SertifikaDüzenle.cshtml" />
     <Content Include="Views\Sertifika\SertifikaEkle.cshtml" />
     <Content Include="Views\Iletisim\Index.cshtml" />
+    <Content Include="Views\Hobilerim\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
